Fix Scrollbar

--- a/style.scss
+++ b/style.scss
@@ -133,7 +133,6 @@ form {
 }
 
 .modal {
-    overflow: scroll;
     &::-webkit-scrollbar { width: 1rem }
     &::-webkit-scrollbar-track { background-color: $silver-lighter }
     &::-webkit-scrollbar-thumb {
